test/expected/declare_hwt.out
declare x as short wchar_t
        ^
9: error: "short wchar_t" is illegal for built-in type
